--- a/styles/style.css
+++ b/styles/style.css
@@ -188,7 +188,6 @@ second-sec-item-2 {
   width: 1140px;
   height: 775px;
   margin: 0 auto;
-  height: 775px;
   /* border: 2px solid red; */
   margin-top: 88px;
 }
@@ -227,4 +226,89 @@ second-sec-item-2 {
   height: 550px;
   border-radius: 16px;
   margin: 10px 0px;
+}
+
+/* Current target */
+
+.fourth-section-container {
+  width: 1140px;
+  height: 590px;
+  /* border: 2px solid red; */
+  margin: 0 auto;
+  margin-top: 170px;
+}
+.fourth-section-title h2 {
+  color: rgb(13, 19, 33);
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 37px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.fourth-section-title p {
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  opacity: 0.7;
+  margin-bottom: 55px;
+}
+.learn-more {
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-decoration-line: underline;
+}
+.fourth-section-content {
+  width: 1140px;
+  height: 399px;
+  /* border: 2px solid green; */
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0px;
+}
+.fourth-section-item-1 {
+  border-radius: 16px;
+  background: rgba(255, 76, 30, 0.05);
+  margin: 0px 24px;
+  padding: 40px;
+}
+.fourth-section-item-2 {
+  border-radius: 16px;
+  background: rgba(0, 76, 232, 0.05);
+  margin: 0px 24px;
+  padding: 40px;
+}
+.fourth-section-item-3 {
+  border-radius: 16px;
+  background: rgba(255, 223, 0, 0.05);
+  margin: 0px 24px;
+  padding: 40px;
+}
+.fourth-item-container h3 {
+  color: rgb(13, 19, 33);
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 36px;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 20px;
+}
+.fourth-item-container p {
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: left;
+  opacity: 0.7;
+  margin-bottom: 14px;
 }
