--- a/styles/style.css
+++ b/styles/style.css
@@ -312,3 +312,78 @@ second-sec-item-2 {
   opacity: 0.7;
   margin-bottom: 14px;
 }
+
+/* support000 */
+
+.fifth-section-container {
+  width: 1140px;
+  height: 313px;
+  margin: 0 auto;
+  margin-top: 50px;
+  border: 2px solid rgb(253, 249, 249);
+  background-image: url("/assets/handshake.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgb(83, 73, 73);
+  background-blend-mode: overlay;
+  border-radius: 16px;
+}
+.fifth-section-content h2 {
+  color: rgb(255, 255, 255);
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-top: 64px;
+  margin-bottom: 16px;
+}
+.fifth-section-content p {
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  opacity: 0.7;
+  margin-bottom: 40px;
+}
+.fifth-section-content form {
+  width: 684px;
+  height: 57px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 0px;
+  margin-left: 20%;
+}
+.fifth-section-content textarea {
+  width: 548px;
+  height: 57px;
+  box-sizing: border-box;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  border-radius: 8px;
+  color: rgba(13, 19, 33, 0.4);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0%;
+  text-align: center;
+  padding: 19px 20px 19px 20px;
+  background: rgb(255, 255, 255);
+}
+.fifth-section-content button {
+  width: 120px;
+  height: 57px;
+  border-radius: 8px;
+
+  background: rgb(255, 255, 255);
+  color: rgb(13, 19, 33);
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 23px;
+  letter-spacing: 0%;
+  text-align: center;
+}
