--- a/styles/style.css
+++ b/styles/style.css
@@ -387,3 +387,45 @@ second-sec-item-2 {
   letter-spacing: 0%;
   text-align: center;
 }
+
+footer {
+  width: 1517px;
+  height: 100px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  /* border: 2px solid red; */
+  border-radius: 16px;
+  background: rgba(13, 19, 33, 0.03);
+  margin-top: 50px;
+}
+.bottom-container {
+  width: 1240px;
+  height: 36px;
+  padding: 32px 150px 32px 150px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px;
+}
+.bottom-container p {
+  color: rgb(13, 19, 33);
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 23px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin: 60px;
+}
+.bottom-icon {
+  width: 157.01px;
+  height: 36px;
+  margin: 10px -210px;
+
+}
+.bottom-icon img{
+     margin-right: 15px;
+}
